--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Gôndola
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8001
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,15 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=gondola
 DB_USERNAME=root
 DB_PASSWORD=
+
+# ZeTools OAuth Configuration (Provider de Autenticação)
+ZETOOLS_CLIENT_ID=1
+ZETOOLS_CLIENT_SECRET=seu_client_secret_aqui
+ZETOOLS_REDIRECT_URI=http://localhost:8001/auth/callback
+ZETOOLS_BASE_URL=http://localhost:8000
 
 
 # AI Configuration - Usando OpenAI temporariamente
